# check-wa

./: .gitignore  .replit  HOW_TO_BUILD.md  README.md  TUNNEL_SETUP.md  api_server.py  desktop_app.py  package-lock.json  package.json  pyproject.toml  replit.md  run.py  run_bot.py  setup_dependencies.py  telegram_bot.py  whatsapp_server.js
.github/workflows/: main.yml  main3.yml
static/: index.html
